--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-cardview": "^2.0.5",
+    "react-native-config": "^1.2.0",
     "react-native-firebase": "5.6.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-analytics-bridge": "^7.1.0",
