Revert "Merge branch 'Santander_Jaideep' into ShefaliChanges"
This reverts commit 7d4d573333091351de242afb59c6951fc9854c11, reversing
changes made to cedc5697cc5f266a8a3769fde46ad917f742fc71.

--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "start": "react-native start",
     "postinstall": "patch-package",
     "test": "jest",
-    "lint": "eslint .",
-    "build-android-dev_release": "cd android && ./gradlew assembleDevRelease",
-    "build-android-preprod_release": "cd android && ./gradlew assemblePreprodRelease",
-    "build-android-prod_release": "cd android && ./gradlew assembleProdRelease"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-native-community/eslint-plugin": "^1.0.0",
