--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-google-analytics-bridge": "^7.1.0",
     "react-native-google-recaptcha-v2": "^1.0.4",
     "react-native-i18n": "^2.0.15",
+    "react-native-localize": "^1.4.0",
     "react-native-modal": "^11.5.4",
     "react-native-reanimated": "^1.6.0",
     "react-native-router-flux": "^4.2.0",
