--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-analytics-bridge": "^7.1.0",
     "react-native-google-recaptcha-v2": "^1.0.4",
+    "react-native-image-picker": "^2.3.1",
     "react-native-modal": "^11.5.4",
     "react-native-reanimated": "^1.6.0",
     "react-native-router-flux": "^4.2.0",
