--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@react-native-community/eslint-plugin": "^1.0.0",
+    "@react-native-firebase/app": "^7.1.0",
+    "@react-native-firebase/firestore": "^7.1.0",
     "bugsnag-react-native": "^2.23.5",
-    "firebase": "7.7.0",
     "i18next": "^19.4.5",
     "native-base": "^2.13.8",
     "patch-package": "^6.2.0",
@@ -24,7 +25,6 @@
     "react-native": "0.62.2",
     "react-native-cardview": "^2.0.5",
     "react-native-config": "^1.2.0",
-    "react-native-firebase": "5.6.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-analytics-bridge": "^7.1.0",
     "react-native-google-recaptcha-v2": "^1.0.4",
