--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "react-native": "0.62.2",
     "react-native-cardview": "^2.0.5",
     "react-native-config": "^1.2.0",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-analytics-bridge": "^7.1.0",
     "react-native-google-recaptcha-v2": "^1.0.4",
-    "react-native-image-picker": "^2.3.1",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-picker": "^2.3.1",
     "react-native-localize": "^1.4.0",
     "react-native-modal": "^11.5.4",
     "react-native-reanimated": "^1.6.0",
