--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-analytics-bridge": "^7.1.0",
     "react-native-google-recaptcha-v2": "^1.0.4",
+    "react-native-google-signin": "^2.1.1",
     "react-native-i18n": "^2.0.15",
     "react-native-localize": "^1.4.0",
     "react-native-modal": "^11.5.4",
