--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,13 @@ target 'Santander' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNLocalize', :path => '../node_modules/react-native-localize'
+  pod 'GoogleSignIn', '~> 5.0.2'
+  # add the Firebase pod for Google Analytics
+  pod 'Firebase/Analytics'
+  # add pods for any other desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
+
   target 'SantanderTests' do
     inherit! :complete
     # Pods for testing
