Barcode scanner done

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -84,6 +84,8 @@ target 'Santander' do
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'SantanderTests' do
     inherit! :complete
     # Pods for testing
