added eye icon in registerScreen
1. change name in App.js file
2. added image-picker file in android and ios

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -86,6 +86,8 @@ target 'Santander' do
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'SantanderTests' do
     inherit! :complete
     # Pods for testing
