--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-google-recaptcha-v2": "^1.0.4",
     "react-native-google-signin": "^2.1.1",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^2.3.1",
     "react-native-localize": "^1.4.0",
     "react-native-modal": "^11.5.4",
