--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-camera": "^3.26.0",
     "react-native-cardview": "^2.0.5",
     "react-native-config": "^1.2.0",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-google-analytics-bridge": "^7.1.0",
     "react-native-google-recaptcha-v2": "^1.0.4",
